<resources>
    <string name="app_name">AndroidPassword</string>
    <string name="action_settings">Settings</string>
    <string name="security">Sécurité</string>
    <string name="usability">Utilisabilité</string>
    <string name="icon_number">Nombre d\'icônes pendant une phase :</string>
    <string name="doublons">Interdire les doublons</string>
    <string name="configurations">Configurations</string>
    <string name="appliquer">Appliquer</string>
    <string name="reset">Reset</string>
</resources>
