<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mbpl.androidpassword.DejaVu.Accueil">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/configurations"
        android:id="@+id/textViewTitre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="50sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_number"
        android:id="@+id/textViewIconNumber"
        android:layout_below="@+id/textViewTitre"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="62dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doublons"
        android:id="@+id/checkBoxDoublons"
        android:layout_marginTop="34dp"
        android:checked="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appliquer"
        android:id="@+id/buttonAppliquer"
        android:layout_marginBottom="52dp"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/buttonReset"
        android:layout_toEndOf="@+id/buttonReset" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/buttonReset"
        android:layout_alignTop="@+id/buttonAppliquer"
        android:layout_alignRight="@+id/checkBoxDoublons"
        android:layout_alignEnd="@+id/checkBoxDoublons" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerIconNumber"
        android:spinnerMode="dropdown"
        android:layout_above="@+id/checkBoxDoublons"
        android:layout_toLeftOf="@+id/buttonReset"
        android:layout_toStartOf="@+id/buttonReset"
        android:layout_below="@+id/textViewIconNumber" />

</RelativeLayout>
